# Schemas/ChatSchema/Models/SendMessageResponseModel.g.cs
@@ -1,20 +1,0 @@
-
-//----------------------
-// <auto-generated>
-//     Generated by LazyMagic.
-//     Do not modify, your changes will be overwritten.
-//     This is a partial class so you can extend the class in a separate file.
-//     Only files with *.g.* extensions will be overwritten.
-// </auto-generated>
-//----------------------
-
-namespace ChatSchema
-{
-    using System = global::System;
-    
-
-public partial class SendMessageResponseModel : SendMessageResponse,IRegisterObservables
-{
-}
-
-}
